# stratum

./: .gitignore  check-versioning-lib-release.sh  cpuminer_setup.sh  flake.nix  rpi.sh  shell.nix  sv2-rpi.sh
.github/workflows/: coverage.yaml  fmt.yaml  integration-tests.yaml  mg.yaml  release-bin.yaml  release-libs.yaml  rust-msrv.yaml  test.yaml
benches/: Cargo.toml
examples/ping-pong/: Cargo.toml  README.md
examples/ping-pong/src/: client.rs  main.rs  messages.rs  server.rs
protocols/: Cargo.toml
protocols/v1/: Cargo.toml
protocols/v1/src/: lib.rs
protocols/v2/channels-sv2/: README.md
protocols/v2/codec-sv2/: Cargo.toml
protocols/v2/framing-sv2/: Cargo.toml  README.md
protocols/v2/roles-logic-sv2/: Cargo.toml
roles/: Cargo.toml
roles/jd-client/: Cargo.toml
roles/pool/: Cargo.toml
roles/pool/src/: main.rs  (+2 more)
roles/tests-integration/: .gitignore  run_until_error.sh
roles/translator/: Cargo.toml
scripts/: release-libs.sh  run-integration-tests.sh
stratum-core/: Cargo.toml  README.md
stratum-core/network-helpers/: Cargo.toml
stratum-core/roles-logic-sv2/: Cargo.toml
stratum-core/roles-logic-sv2/binary-sv2/codec/: Cargo.toml
stratum-core/roles-logic-sv2/codec-sv2/: Cargo.toml
stratum-core/roles-logic-sv2/framing-sv2/: Cargo.toml
stratum-core/src/: lib.rs
stratum-core/sv1/: Cargo.toml
sv2/channels-sv2/: Cargo.toml
test/config/: tproxy-config-no-jd-sv1-cpu-md.toml
test/integration-tests/: Cargo.toml
utils/: Cargo.toml
utils/buffer/: Cargo.toml
utils/key-utils/: Cargo.toml
utils/message-generator/: README.md
(+115 files in other folders)
