[package]
name = "stratum_core"
version = "1.0.0"
edition = "2018"
description = "Umbrella crate with Stratum Reference Implementation building blocks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stratum-mining/stratum"

[dependencies]
roles_logic_sv2 = { path = "./roles-logic-sv2" }
network_helpers_sv2 = { path = "./network-helpers", features = ["with_buffer_pool"], optional = true }
key-utils = { path = "./key-utils", optional = true }
sv1_api = { path = "./sv1", optional = true }

[features]
with_network_helpers = ["dep:network_helpers_sv2"]
with_key_utils = ["dep:key-utils"]
with_sv1 = ["network_helpers_sv2/sv1", "dep:sv1_api"]
